fix(layout): SKFP-1285 remove double scrollbar

--- a/src/components/Layout/index.module.css
+++ b/src/components/Layout/index.module.css
@@ -7,3 +7,7 @@
   height: 100%;
   overflow: auto;
 }
+
+.mainLayout .mainContent.noScrollbar {
+  overflow: hidden;
+}
